added CSS and Bootstrap

--- a/static/index.html
+++ b/static/index.html
@@ -24,7 +24,7 @@
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
 		<div class="jumbotron">
-			<h1>Michael Bernstein</h1>
+			<h1>Wilson Leung</h1>
 			<p>human-computer interaction &middot; social computing &middot; crowdsourcing</p>
 		</div>
 
@@ -34,15 +34,15 @@
 		<!-- img tags are images. Lorem Pixel will deliver random images; handy! -->
 		<!-- a are anchors, also known as hyperlinks. Use the href attribute to tell the browser where to go when the user clicks -->
 		<div class="project" id="project1">
-			<a href="project.html" class="thumbnail">
-				<img src="images/lorempixel.people.1.jpeg" alt="Lorem Pixel image" class="img">
-				<p>Waiting in Line</p>
+			<a href="https://taggrdatabase.firebaseapp.com/" class="thumbnail">
+				<img src="images/taggr.png" alt="taggr" class="img">
+				<p>HTML tag usage database.</p>
 			</a>
 		</div>
 		<div class="project" id="project2">
-			<a href="project.html" class="thumbnail">
-				<img src="images/lorempixel.city.1.jpeg" alt="Lorem Pixel image" class="img">
-				<p>Needfinding</p>
+			<a href="https://upnotes.parseapp.com/" class="thumbnail">
+				<img src="images/upnotes.png" alt="upnotes" class="img">
+				<p>Upload and share notes for others.</p>
 			</a>
 		</div>
 		<div class="project" id="project3">
