--- a/static/index.html
+++ b/static/index.html
@@ -35,13 +35,13 @@
 		<!-- a are anchors, also known as hyperlinks. Use the href attribute to tell the browser where to go when the user clicks -->
 		<div class="project" id="project1">
 			<a href="https://taggrdatabase.firebaseapp.com/" class="thumbnail">
-				<img src="images/taggr.png" alt="taggr" class="img">
+				<img src="images/taggr.jpg" alt="taggr" class="img">
 				<p>HTML tag usage database.</p>
 			</a>
 		</div>
 		<div class="project" id="project2">
 			<a href="https://upnotes.parseapp.com/" class="thumbnail">
-				<img src="images/upnotes.png" alt="upnotes" class="img">
+				<img src="images/upnotes.jpg" alt="upnotes" class="img">
 				<p>Upload and share notes for others.</p>
 			</a>
 		</div>
